fix: align plugin settings with functions